# spooky-diffusion

./: .gitignore  modal_server.py  pyproject.toml
spooky-diffusion/: app.py
